--- a/.eslintrc
+++ b/.eslintrc
@@ -30,7 +30,7 @@
       ]
   },
   "rules": {
-      "no-underscore-dangle": "off",
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
       "import/extensions": [
           "error",
           "ignorePackages",
